--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ src="https://www.facebook.com/tr?id=1064197169159824&ev=PageView&noscript=1"
 <!-- End Meta Pixel Code -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KING KHALID ™ | Join Free Channel</title>
+    <title>ADIL AJMERI ™ | Join Free Channel</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -76,14 +76,14 @@ src="https://www.facebook.com/tr?id=1064197169159824&ev=PageView&noscript=1"
     <div class="card shadow-2xl max-w-md w-full p-6 md:p-8">
         <!-- Profile Section -->
         <div class="text-center">
-            <img src="logo.jpg" alt="KING KHALID ™" class="w-32 h-32 mx-auto rounded-full border-4 border-gray-300 shadow-lg">
-            <h1 class="text-3xl font-extrabold text-white mt-4">KING KHALID ™</h1>
+            <img src="logo.jpg" alt="ADIL AJMERI ™" class="w-32 h-32 mx-auto rounded-full border-4 border-gray-300 shadow-lg">
+            <h1 class="text-3xl font-extrabold text-white mt-4">ADIL AJMERI ™</h1>
             <h2 class="text-lg text-gray-300 mt-2">😍 Best Betting Site👇🏻 😍</h2>
         </div>
 
         <!-- Call to Action Button -->
         <div class="mt-6 text-center">
-            <a href="https://t.me/+MaYCGnVGmQI5MmE1">
+            <a href="https://t.me/+4tsGtwReZZ9hOWY1">
                 <button class="w-full bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500 text-white font-bold py-3 rounded-lg button-animated text-lg shadow-lg" id="button1">
                     <i class="fab fa-telegram mr-2"></i> JOIN FREE CHANNEL NOW
                 </button>
@@ -96,10 +96,10 @@ src="https://www.facebook.com/tr?id=1064197169159824&ev=PageView&noscript=1"
                 🎯 Toss + Match + Session Prediction 🔥
             </h3>
             <h3 class="py-2 rounded-lg font-semibold text-lg shadow-lg text-white bg-black bg-opacity-75">
-                ✅ Free Fantasy Teams
+                ✅ Free CRICKET Teams
             </h3>
         </div>
-        <a href="https://t.me/+MaYCGnVGmQI5MmE1" class="block w-full">
+        <a href="https://t.me/+4tsGtwReZZ9hOWY1" class="block w-full">
             <div class="py-2 px-6 rounded border-white border-2 mt-3 text-white font-bold bg-blue-500 rounded" style="box-shadow: 0px 0px 1px 3px blue;">
                 💰 MAUKA HAI CRORE KAMANE KA 💰
             </div>
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=1064197169159824&ev=PageView&noscript=1"
         <!-- Join Message -->
         
     </div>
-     <footer style="position: absolute;bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase; z-index:99 !important;  "><a href="https://t.me/+MaYCGnVGmQI5MmE1" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> Wasim Indori </strong></a></footer>
+     <footer style="position: absolute;bottom: 0; background-color: rgb(255, 255, 255); width: 100%; text-align: center; text-transform: uppercase; z-index:99 !important;  "><a href="https://t.me/+4tsGtwReZZ9hOWY1" style="color: black; text-decoration: none;">  Advertisment By <strong style="color: blue; text-decoration:underline; text-transform: none;"> WASIM INDORI </strong></a></footer>
 
 <script>
     document.addEventListener('contextmenu', function (e) {
