--- a/index.html
+++ b/index.html
@@ -21,38 +21,27 @@ src="https://www.facebook.com/tr?id=2229102064193975&ev=PageView&noscript=1"
 <!-- End Meta Pixel Code -->
     <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Join Telegram Channel</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 100px;
-      background-color: #f9f9f9;
+      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
     }
 
     .telegram-button {
       background-color: #0088cc;
       color: #fff;
-      padding: 14px 28px;
+      padding: 16px 32px;
       font-size: 18px;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: pointer;
       text-decoration: none;
-      display: inline-block;
-      transition: background 0.3s;
-    }
-
-    .telegram-button:hover {
-      background-color: #006c99;
-    }
-  </style>
-</head>
-<body>
-
-  <a href="https://t.me/+4tsGtwReZZ9hOWY1" target="_blank" class="telegram-button">
-    🚀 JOIN NOW
-  </a>
-
-</body>
-</html>
+      box-shadow: 0 4px 10px rgba(
